--- a/hw5/.gitignore
+++ b/hw5/.gitignore
@@ -1,2 +1,10 @@
 output/
+output (15)/
+output (19)/
+output (20)/
+output (22)/
+output (24)/
+images.npy
 hw5_data/
+train_data_raw_int32.npy
+train_data_raw.npy
